Fix CORS origin patterns for cross-origin authentication